--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    command: --check-caps false
+    command: --check-caps false --ISCAgent false
     ports: 
-      - 52772:1972
+      - 51773:1972
       - 52773:52773
       - 53773
     volumes:
